# aureum

./: Cargo.toml  LICENSE  README.md  run-spec.sh  run_spec.sh  spec.au.toml
.github/workflows/: ci.yml
examples/: bash.au.toml  bash.toml
spec/: all.au.toml  all.toml  run-all.sh
spec/aureum/: failing-test.au.toml  no-args.au.toml
spec/aureum02/: test.au.toml
spec/aureum03/: test.au.toml
spec/basic/: custom-name.au.toml  description.au.toml  expect-exit-code.au.toml  expect-stderr.au.toml  expect-stdout.au.toml  expect_exit_code.au.toml  expect_stderr.au.toml  read-env-var.au.toml  read-external-file.au.toml  read_external_file.au.toml  run-bash.au.toml  run-local-program.au.toml  run_bash.au.toml  run_local_program.au.toml
spec/basic01/: test.au.toml  test.toml
spec/basic02/: test.toml
spec/basic03/: test.toml
spec/basic04/: test.au.toml
spec/basic05/: test.au.toml
spec/basic06/: test.toml
spec/glob/: multiple-dirs.au.toml  multiple-files.au.toml  test-dir.au.toml  test-multiple-files.au.toml  test-multiple-files2.toml  test-single-file.au.toml
spec/multi/: two-levels.au.toml  two-tests.au.toml  two-tests.toml
src/: ascii_tree.rs  cli.rs  file_util.rs  lib.rs  main.rs  tap_format.rs  test_case.rs  test_config.rs  test_id.rs  test_id_container.rs  test_result.rs  test_runner.rs  toml_config.rs
src/ascii_tree/: mod.rs
src/cli/: error.rs  file.rs  mod.rs  report.rs
src/formats/: mod.rs  tap.rs  tree.rs
src/utils/: file.rs  mod.rs  string.rs
tests/: file_util_test.rs  file_utils_test.rs
tests/file_utils/: hello_world.sh
(+47 files in other folders)
