[package]
name = "aureum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
glob = "0.3.1"
rayon = "1.6.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
toml = "0.5.10"
